@@ -11,7 +11,7 @@ group = 'io.github.krloxz.fws'
 version = '0.0.1-SNAPSHOT'
 
 java {
-  sourceCompatibility = '17'
+  sourceCompatibility = '21'
 }
 
 configurations {
@@ -130,6 +130,7 @@ eclipse {
 
 tasks.named('test') {
   useJUnitPlatform()
+  jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 test {
